--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "terminal.integrated.env.windows": {
         "PATH": "C:\\Users\\tiben\\.platformio\\penv\\Scripts;C:\\Users\\tiben\\.platformio\\penv;C:\\WINDOWS\\system32;C:\\WINDOWS;C:\\WINDOWS\\System32\\Wbem;C:\\WINDOWS\\System32\\WindowsPowerShell\\v1.0\\;C:\\WINDOWS\\System32\\OpenSSH\\;C:\\Program Files\\nodejs\\;C:\\Program Files\\Git\\cmd;C:\\Program Files (x86)\\GitExtensions\\;C:\\Users\\tiben\\AppData\\Local\\Microsoft\\WindowsApps;C:\\Users\\tiben\\AppData\\Local\\Programs\\Microsoft VS Code\\bin;C:\\Users\\tiben\\AppData\\Roaming\\npm;C:\\Users\\tiben\\AppData\\Local\\GitHubDesktop\\bin;C:\\WINDOWS\\system32;C:\\WINDOWS;C:\\WINDOWS\\System32\\Wbem;C:\\WINDOWS\\System32\\WindowsPowerShell\\v1.0\\;C:\\WINDOWS\\System32\\OpenSSH\\;C:\\Program Files\\nodejs\\;C:\\Program Files\\Git\\cmd;C:\\Program Files (x86)\\GitExtensions\\;C:\\Users\\tiben\\AppData\\Local\\Microsoft\\WindowsApps;C:\\Users\\tiben\\AppData\\Local\\Programs\\Microsoft VS Code\\bin;C:\\Users\\tiben\\AppData\\Roaming\\npm;C:\\Users\\tiben\\AppData\\Local\\GitHubDesktop\\bin",
         "PLATFORMIO_CALLER": "vscode"
-    }
+    },
+    "C_Cpp.errorSquiggles": "Disabled"
 }
